--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,10 @@
     <title>Webpack + React</title>
   </head>
   <body>
+    <h1>Preset Generator</h1>
+    <div class="Generator"></div>
+    <h1>User Set Sentence Template</h1>
+    <div class="SentenceBox"></div>
   </body>
   <script src="app.js"></script>
 </html>
